--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Tambahkan font Google untuk Dapekos */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
-/* Atur tampilan navbar */
+Atur tampilan navbar
 .navbar {
     font-family: 'Roboto', sans-serif;
 }
